# dancing-links

./: CMakeLists.txt  README.md
include/: bit.h  bitmap.h  cell.h  dancing_links.h  hashtable.h  linked_list.h  macrocell.h  rules.h  sudoku.h  universe.h  utility.h
src/: CMakeLists.txt  cell.cpp  dancing_links.cpp  life.cpp  macrocell.cpp  main.cpp  sudoku.cpp
tests/: CMakeLists.txt  bitmap_test.cpp  dancing_links_test.cpp  life_test.cpp  sudoku_test.cpp
